<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_Titulo">Aplicativo Lista Vip Curso Android</string>
    <string name="txt_hint_edit_promeiro_nome">Primeiro nome</string>
    <string name="txt_hint_sobrenome">Sobrenome</string>
    <string name="txt_hint_curso_desejado">Nome do curso desejado</string>
    <string name="txt_hint_contato">Telefone de contato</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>
    <string name="txt_selecione_um_curso">Selecione um curso..</string>
</resources>